# plug-blockchain

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.adoc  README.md  docker-compose.yml  license_header.txt  shell.nix
.circleci/: config.yml
.github/workflows/: ci.yml
.maintain/: Dockerfile  rename-crates-for-2.0.sh
.plug/: Dockerfile  bootstrap  docker-compose.yml  logger.sh  overwrite-ui  test-wasm
.plug/prometheus/: prometheus.yml
client/: Cargo.toml
client/api/: Cargo.toml
client/authority-discovery/: Cargo.toml
client/basic-authorship/: Cargo.toml
client/block-builder/: Cargo.toml
client/cli/: Cargo.toml
client/db/: Cargo.toml
client/executor/: Cargo.toml
client/finality-grandpa/: Cargo.toml
client/keystore/: Cargo.toml
client/network/: Cargo.toml
client/network-gossip/: Cargo.toml
client/offchain/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-api/: Cargo.toml
client/rpc-servers/: Cargo.toml
client/service/: Cargo.toml
client/src/: client.rs
client/state-db/: Cargo.toml
client/telemetry/: Cargo.toml
client/transaction-pool/: Cargo.toml
core/basic-authorship/: Cargo.toml
core/client/: Cargo.toml
core/executor/: Cargo.toml
core/externalities/: Cargo.toml
core/finality-grandpa/: Cargo.toml
core/inherents/: Cargo.toml
core/network/: Cargo.toml
core/offchain/: Cargo.toml
core/primitives/: Cargo.toml
core/rpc/: Cargo.toml
core/service/: Cargo.toml
core/sr-api-macros/: Cargo.toml
core/sr-io/: Cargo.toml
core/sr-primitives/: Cargo.toml
core/sr-sandbox/: Cargo.toml
core/sr-version/: Cargo.toml
core/state-db/: Cargo.toml
core/state-machine/: Cargo.toml
core/telemetry/: Cargo.toml
core/test-client/: Cargo.toml
core/test-runtime/: Cargo.toml
core/transaction-pool/: Cargo.toml
core/trie/: Cargo.toml
docs/: PULL_REQUEST_TEMPLATE.md  README.adoc  Upgrading-2.0-to-3.0.md
frame/assets/: Cargo.toml  README.md
frame/atomic-swap/: README.md
frame/aura/: Cargo.toml  README.md
frame/authority-discovery/: Cargo.toml
frame/authorship/: Cargo.toml
frame/babe/: Cargo.toml
frame/balances/: Cargo.toml  README.md
frame/benchmark/: Cargo.toml
frame/benchmarking/: Cargo.toml
frame/collective/: Cargo.toml
frame/contracts/: Cargo.toml  README.md
frame/democracy/: Cargo.toml  README.md
frame/elections/: Cargo.toml
frame/elections-phragmen/: Cargo.toml  README.md
frame/evm/: Cargo.toml
frame/example/: Cargo.toml  README.md
frame/example-offchain-worker/: Cargo.toml
frame/executive/: Cargo.toml  README.md
frame/finality-tracker/: Cargo.toml
frame/generic-asset/: Cargo.toml
frame/generic-asset/rpc/: Cargo.toml
frame/generic-asset/rpc/runtime-api/: Cargo.toml
frame/generic-asset/rpc/runtime-api/src/: lib.rs
frame/generic-asset/rpc/src/: lib.rs
frame/grandpa/: Cargo.toml
frame/identity/: Cargo.toml  README.md
frame/im-online/: Cargo.toml  README.md
frame/membership/: Cargo.toml
frame/metadata/: Cargo.toml
frame/multisig/: README.md
frame/nicks/: Cargo.toml  README.md
frame/proxy/: README.md
frame/recovery/: Cargo.toml  README.md
frame/scheduler/: README.md
frame/scored-pool/: Cargo.toml  README.md
frame/session/: Cargo.toml  README.md
frame/society/: Cargo.toml  README.md
frame/staking/: Cargo.toml  README.md
frame/sudo/: Cargo.toml  README.md
frame/support/: Cargo.toml
frame/system/: Cargo.toml  README.md
frame/timestamp/: Cargo.toml  README.md
frame/treasury/: Cargo.toml
frame/utility/: Cargo.toml  README.md
frame/vesting/: Cargo.toml  README.md
genesis/: plugnet-t1.json
node-template/runtime/: Cargo.toml
node/cli/: Cargo.toml
node/executor/: Cargo.toml
node/primitives/: Cargo.toml
node/runtime/: Cargo.toml
node/src/: main.rs
primitives/allocator/: Cargo.toml
primitives/application-crypto/: Cargo.toml
primitives/authority-discovery/: Cargo.toml
primitives/blockchain/: Cargo.toml
primitives/core/: Cargo.toml
primitives/debug-derive/: Cargo.toml
primitives/finality-grandpa/: Cargo.toml
primitives/io/: Cargo.toml
primitives/phragmen/: Cargo.toml
primitives/runtime/: Cargo.toml
primitives/runtime-interface/: Cargo.toml
primitives/sandbox/: Cargo.toml
primitives/session/: Cargo.toml
primitives/sr-primitives/: Cargo.toml
primitives/timestamp/: Cargo.toml
primitives/transaction-pool/: Cargo.toml
primitives/wasm-interface/: Cargo.toml
prml/attestation/: Cargo.toml
prml/attestation/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs
prml/common/: Cargo.toml
prml/consortium-permission/: Cargo.toml
prml/consortium-permission/src/: lib.rs  mock.rs  tests.rs
prml/doughnut/: Cargo.toml
prml/doughnut/src/: constants.rs  impls.rs  lib.rs
prml/fees/: Cargo.toml
prml/fees/src/: lib.rs  mock.rs  tests.rs
prml/generic-asset/: Cargo.toml
prml/generic-asset/rpc/: Cargo.toml
prml/generic-asset/rpc/runtime-api/: Cargo.toml
prml/generic-asset/rpc/runtime-api/src/: lib.rs
prml/generic-asset/rpc/src/: lib.rs
prml/generic-asset/src/: benchmarking.rs  default_weight.rs  imbalances.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
prml/support/: Cargo.toml
prml/support/src/: lib.rs
prml/validator-manager/: Cargo.toml  README.md
prml/validator-manager/src/: lib.rs  mock.rs  tests.rs
scripts/: common.sh
srml/assets/: Cargo.toml
srml/aura/: Cargo.toml
srml/babe/: Cargo.toml
srml/balances/: Cargo.toml
srml/consensus/: Cargo.toml
srml/contract/: Cargo.toml
srml/council/: Cargo.toml
srml/democracy/: Cargo.toml
srml/example/: Cargo.toml
srml/executive/: Cargo.toml
srml/finality-tracker/: Cargo.toml
srml/generic-asset/: Cargo.toml
srml/grandpa/: Cargo.toml
srml/indices/: Cargo.toml
srml/metadata/: Cargo.toml
srml/session/: Cargo.toml
srml/staking/: Cargo.toml
srml/sudo/: Cargo.toml
srml/support/: Cargo.toml
srml/system/: Cargo.toml
srml/timestamp/: Cargo.toml
srml/treasury/: Cargo.toml
subkey/: Cargo.toml
subkey/src/: main.rs
test-utils/: Cargo.toml
test-utils/runtime/: Cargo.toml
(+426 files in other folders)
