[package]
name = "sp-authority-discovery"
version = "2.0.0-alpha.5"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Authority discovery primitives"
edition = "2018"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
sp-application-crypto = { version = "2.0.0-alpha.5", default-features = false, path = "../application-crypto" }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false, path = "../std" }
sp-api = { version = "2.0.0-alpha.5", default-features = false, path = "../api" }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std"
]
