[package]
name = "prml-consortium-permission"
version = "2.0.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
frame-support = { default-features = false, path = "../../frame/support" }
frame-system = { default-features = false, path = "../../frame/system" }
sp-runtime = { default-features = false, path = "../../primitives/runtime" }
sp-std = { default-features = false, path = "../../primitives/std" }

[dev-dependencies]
sp-core = { path = "../../primitives/core" }
sp-io = { path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
