[package]
name = "prml-doughnut"
version = "2.0.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
sp-core = { path = "../../primitives/core", default-features = false }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
frame-support = { path = "../../frame/support", default-features = false }

[dev-dependencies]
sp-io = { path = "../../primitives/io", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
]
