[package]
name = "prml-doughnut"
version = "2.0.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
sp-core = { default-features = false, path = "../../primitives/core" }
sp-std = { default-features = false, path = "../../primitives/std" }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
frame-support = { default-features = false, path = "../../frame/support" }

[dev-dependencies]
sp-keyring = { default-features = false, path = "../../primitives/keyring" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
]
