[package]
name = "prml-fees"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.1", default-features = false }
substrate-primitives = { path = "../../core/primitives", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
runtime_primitives = { package = "sr-primitives", path = "../../core/sr-primitives", default-features = false }
support = { package="srml-support", path = "../../srml/support", default-features = false }
system = { package = "srml-system", path = "../../srml/system", default-features = false }

[dev-dependencies]
generic-asset = { package="prml-generic-asset", path = "../generic-asset", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime_io/std",
	"runtime_primitives/std",
	"support/std",
	"system/std",
]
