[package]
name = "prml-generic-asset"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false }
parity-codec = { version = "3.1", default-features = false, features = ["derive"] }
substrate-primitives = { path = "../../core/primitives", default-features = false }
primitives = { package = "sr-primitives", path = "../../core/sr-primitives", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
support = { package="srml-support", path = "../../srml/support", default-features = false }
system = { package = "srml-system", path = "../../srml/system", default-features = false }

[features]
default = ["std"]
std =[
	"serde/std",
    "parity-codec/std",
    "substrate-primitives/std",
    "rstd/std",
    "runtime_io/std",
    "primitives/std",
    "support/std",
    "system/std",
]
