[package]
name = "prml-generic-asset"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "A runtime module for managing an ERC-20 like fungible assets"

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true}
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-io ={ version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std =[
	"serde/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
