[package]
name = "prml-generic-asset"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "A runtime module for managing an ERC-20 like fungible assets"

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true}
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
sp-std = { path = "../../primitives/std", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
frame-support = { path = "../../frame/support", default-features = false }
frame-system = { path = "../../frame/system", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, path = "../../frame/benchmarking", optional = true }

[dev-dependencies]
sp-io ={ path = "../../primitives/io", default-features = false }
sp-core = { path = "../../primitives/core", default-features = false }

[features]
default = ["std"]
std =[
	"codec/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]