[package]
name = "pallet-generic-asset-rpc"
version = "2.0.0-alpha.5"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "RPC interface for the generic asset module."

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5" }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
sp-core = { version = "2.0.0-alpha.5", path = "../../../primitives/core" }
sp-rpc = { version = "2.0.0-alpha.5", path = "../../../primitives/rpc" }
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = { version = "2.0.0-alpha.5", path = "../../../primitives/runtime" }
sp-api = { version = "2.0.0-alpha.5", path = "../../../primitives/api" }
sp-blockchain = { version = "2.0.0-alpha.5", path = "../../../primitives/blockchain" }
pallet-generic-asset-rpc-runtime-api = { version = "2.0.0-alpha.5", path = "./runtime-api" }
pallet-generic-asset = { version = "2.0.0-alpha.5", path = "./.." }
