[package]
name = "prml-generic-asset-rpc"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "RPC interface for the generic asset module."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sp-api = { path = "../../../primitives/api" }
sp-blockchain = { path = "../../../primitives/blockchain" }
sp-core = { path = "../../../primitives/core" }
sp-rpc = { path = "../../../primitives/rpc" }
sp-runtime = { path = "../../../primitives/runtime" }
prml-generic-asset = { path = "../" }
prml-generic-asset-rpc-runtime-api = { path = "runtime-api" }
