[package]
name = "prml-generic-asset-rpc"
version = "3.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "RPC interface for the generic asset module."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sp-api = { path = "../../../primitives/api" }
sp-blockchain = { path = "../../../primitives/blockchain" }
sp-core = { path = "../../../primitives/core" }
sp-rpc = { path = "../../../primitives/rpc" }
sp-runtime = { path = "../../../primitives/runtime" }
prml-generic-asset = { path = "../" }
prml-generic-asset-rpc-runtime-api = { path = "runtime-api" }
sc-client-db = { version = "0.9.0", path = "../../../client/db", features = ["kvdb-rocksdb", "parity-db"] }

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sc-consensus = { version = "0.9.0", path = "../../../client/consensus/common" }
serde_json = "1.0.50"
sp-keyring = { version = "3.0.0", path = "../../../primitives/keyring" }
sc-keystore = { version = "3.0.0", path = "../../../client/keystore" }
sp-application-crypto = { version = "3.0.0", path = "../../../primitives/application-crypto" }
sp-keystore = { version = "0.9.0", path = "../../../primitives/keystore" }
sc-consensus-babe = { version = "0.9.0", path = "../../../client/consensus/babe" }
sc-rpc-api = { version = "0.9.0", path = "../../../client/rpc-api" }
sc-consensus-epochs = { version = "0.9.0", path = "../../../client/consensus/epochs" }
tempfile = "3.1.0"
