[package]
name = "pallet-generic-asset-rpc-runtime-api"
version = "2.0.0-alpha.5"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "Runtime API definition required by Generic Asset RPC extensions."

[dependencies]
sp-api = { version = "2.0.0-alpha.5", default-features = false, path = "../../../../primitives/api" }
sp-std = { version = "2.0.0-alpha.5", default-features = false, path = "../../../../primitives/std" }
pallet-generic-asset = { version = "2.0.0-alpha.5", default-features = false, path = "../../../../frame/generic-asset" }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]
