[package]
name = "prml-generic-asset-rpc-runtime-api"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/plugblockchain/plug-blockchain/"
description = "Runtime API definition required by Generic Asset RPC extensions."

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
prml-generic-asset = { default-features = false, path = "../../" }
sp-api = { default-features = false, path = "../../../../primitives/api" }
sp-std = { default-features = false, path = "../../../../primitives/std" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]
